22/10/2022 home - попытка исправления замечаний ревьюера № 2